# incremental-thinking

./: .gitignore  .mdvlog  .pre-commit-config.yaml  incremental_thinking.sh  main.py  promote copy.py  promote.py  promote.sh  pyproject.toml  update_incremental_thinking.sh  update_promotions.sh
.github/workflows/: pytest.yml
application/: incremental_thinking.sh  main.py
src/inc/incthink/: file_editor_handling.py  file_processing.py  filesystem_handling.py  logging.py  md_file_editors.py  utils.py
src/incremental_thinking/: file_editor_handling.py  filesystem_handling.py  logging.py  md_file_editors.py  utils.py
tests/test_all/: test_filesystem_handling.py  test_full_script.py
tests/test_files/: test_filehandling.md
